--- a/Project/CE_FogOfWar/Assembly-CSharp.csproj
+++ b/Project/CE_FogOfWar/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="Assets\Code\Debug\DebugExplorer.cs" />
     <Compile Include="Assets\Code\Debug\DebugStalker.cs" />
+    <Compile Include="Assets\Code\Debug\DebugStaticExplorer.cs" />
     <Compile Include="Assets\Code\Debug\FowDebugRoot.cs" />
     <Compile Include="Assets\Code\Debug\TestPlayer.cs" />
     <Compile Include="Assets\Code\FogOfWar\Script\CEFowFacade.cs" />
@@ -67,19 +68,19 @@
     <None Include="Assets\Code\FogOfWar\Shader\CE_FOW_Blur.shader" />
     <None Include="Assets\Code\FogOfWar\Shader\CE_FOW_TextureOnly.shader" />
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>/Users/eran/WorkGround/Unity/Project/CE_FogOfWar/Project/CE_FogOfWar/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>/Users/eran/WorkGround/Unity/Project/Git_CEFogOfWar/Project/CE_FogOfWar/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.PackageManagerUI.Editor">
-      <HintPath>/Users/eran/WorkGround/Unity/Project/CE_FogOfWar/Project/CE_FogOfWar/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
+      <HintPath>/Users/eran/WorkGround/Unity/Project/Git_CEFogOfWar/Project/CE_FogOfWar/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.CollabProxy.Editor">
-      <HintPath>/Users/eran/WorkGround/Unity/Project/CE_FogOfWar/Project/CE_FogOfWar/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+      <HintPath>/Users/eran/WorkGround/Unity/Project/Git_CEFogOfWar/Project/CE_FogOfWar/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>/Users/eran/WorkGround/Unity/Project/CE_FogOfWar/Project/CE_FogOfWar/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+      <HintPath>/Users/eran/WorkGround/Unity/Project/Git_CEFogOfWar/Project/CE_FogOfWar/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.DataPrivacy">
-      <HintPath>/Users/eran/WorkGround/Unity/Project/CE_FogOfWar/Project/CE_FogOfWar/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
+      <HintPath>/Users/eran/WorkGround/Unity/Project/Git_CEFogOfWar/Project/CE_FogOfWar/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>/Applications/Unity/Hub/Editor/2018.3.1f1/Unity.app/Contents/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
@@ -286,13 +287,13 @@
       <HintPath>/Applications/Unity/Hub/Editor/2018.3.1f1/Unity.app/Contents/UnityExtensions/Unity/UnitySpatialTracking/RuntimeEditor/UnityEngine.SpatialTracking.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.Editor">
-      <HintPath>/Users/eran/WorkGround/Unity/Project/CE_FogOfWar/Project/CE_FogOfWar/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Editor.dll</HintPath>
+      <HintPath>/Users/eran/WorkGround/Unity/Project/Git_CEFogOfWar/Project/CE_FogOfWar/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.StandardEvents">
-      <HintPath>/Users/eran/WorkGround/Unity/Project/CE_FogOfWar/Project/CE_FogOfWar/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.StandardEvents.dll</HintPath>
+      <HintPath>/Users/eran/WorkGround/Unity/Project/Git_CEFogOfWar/Project/CE_FogOfWar/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.StandardEvents.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.Tracker">
-      <HintPath>/Users/eran/WorkGround/Unity/Project/CE_FogOfWar/Project/CE_FogOfWar/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Tracker.dll</HintPath>
+      <HintPath>/Users/eran/WorkGround/Unity/Project/Git_CEFogOfWar/Project/CE_FogOfWar/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Tracker.dll</HintPath>
     </Reference>
     <Reference Include="netstandard">
       <HintPath>/Applications/Unity/Hub/Editor/2018.3.1f1/Unity.app/Contents/NetStandard/ref/2.0.0/netstandard.dll</HintPath>
